@@ -74,6 +74,7 @@ Bug fixes:
 - Fix unknown state when creating ZFS pool.
 - Fix failure to detect installed device.
 - Fix wrong encrypted pass phrase with special characters.
+- Reflect owner and permission when ZFS config sync.
 
 Permanent restrictions:
 - It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
